Tue Jun 20 18:16:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* data/preferences-dialog.glade:
	  - Move widget creation for the spell-checking preferences page into
	    the code, in preparation for making the contents of the page
	    dependent on whether or not enchant is installed with any
	    dictionaries.

Tue Jun 20 17:47:04 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/channel-list.c:
	* data/xchat-gnome-ui.xml:
	* data/channel-list.glade:
	  - Remove the "Save List As" button from the channel list window and
	    the "Information" entry from the network menu.  They can be added
	    back when/if they're implemented.

Tue Jun 20 17:31:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.13svn

==================== 0.12 ====================

Tue Jun 20 16:16:24 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* NEWS:
	  - Add tagline

Tue Jun 20 15:56:39 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.12

Mon Jun 19 23:23:23 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* NEWS:
	  - update

Sun Jun 18 22:34:58 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/palette.c:
	  - Use CIE L*a*b* instead of HSV, for improved results.

Sat Jun 17 16:17:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Make the close button more svelte.

Sat Jun 17 16:13:53 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Fix a booboo in window resizing.

Sat Jun 17 16:11:38 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/topic-label.c:
	  - Only show the expander triangle if the topic is long enough that
	    it can wrap. (#326460)

Fri Jun 16 22:45:51 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/dcc-window.c: